--- a/BnsRef/src/main/resources/application.properties
+++ b/BnsRef/src/main/resources/application.properties
@@ -13,9 +13,12 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate (JPA)
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+
 spring.jpa.show-sql=${JPA_SHOW_SQL:true}
 # Initialiser la base de données
 spring.sql.init.mode=${SQL_INIT_MODE:always}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
 
 
 # Pool de connexions HikariCP
