--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -8,3 +8,18 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 
 spring.cloud.config.server.git.uri=https://github.com/Awadi920/Config-repo.git
+
+# Active le debug sur le composant qui fetch depuis Git
+logging.level.org.springframework.cloud.config.server.environment=DEBUG
+logging.level.org.springframework.cloud.config=DEBUG
+logging.level.org.springframework.cloud.config.server.environment.MultipleJGitEnvironmentRepository=DEBUG
+
+spring.cloud.config.server.git.username=
+spring.cloud.config.server.git.password=
+
+
+#server.port=8888
+#spring.application.name=config-service
+#spring.cloud.config.server.git.uri=https://github.com/Awadi920/Config-repo.git
+#spring.cloud.config.server.git.username=${GIT_USERNAME}
+#spring.cloud.config.server.git.password=${GIT_PASSWORD}
