--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 spring.cloud.config.enabled=false
 
+# Configuration CORS pour tous les endpoints de bns-reference
+#spring.cloud.gateway.default-filters=DedupeResponseHeader=Access-Control-Allow-Origin
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-origins=*
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-methods=*
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allowed-headers=*
+#spring.cloud.gateway.globalcors.cors-configurations['[/**]'].allow-credentials=true
+
+
+# Gateway routes configuration
+#spring.cloud.gateway.routes[0].id=bns-reference-route
+#spring.cloud.gateway.routes[0].uri=lb://bns-reference
+#spring.cloud.gateway.routes[0].predicates[0].name=Path
+#spring.cloud.gateway.routes[0].predicates[0].args.pattern=/bns-reference/api/**
+#spring.cloud.gateway.routes[0].filters[0].name=StripPrefix
+#spring.cloud.gateway.routes[0].filters[0].args.count=1
+
