--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
     depends_on:
       - config-server
       - eureka-server
+      - bns-reference
     networks:
       - app-network
     healthcheck:
@@ -131,9 +132,10 @@ services:
       - DB_DATABASE=${DB_NAME}
       - DB_USER=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
-    command: start-dev --import-realm
+      - KC_HTTP_PORT=8085
+    command: start-dev --http-port=8085 --import-realm
     ports:
-      - "${KEYCLOAK_PORT}:8080"
+      - "${KEYCLOAK_PORT}:8085"
     volumes:
       - ./keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json
     depends_on:
